--- a/src/main/resources/db/changelog/0004-add-new-column-and-foreignKey-to-financial_transaction.yaml
+++ b/src/main/resources/db/changelog/0004-add-new-column-and-foreignKey-to-financial_transaction.yaml
@@ -1,6 +1,6 @@
 databaseChangeLog:
   - changeSet:
-      id: "9"
+      id: "add column and foreign key"
       author: pmackowiak
       changes:
         - addColumn:
