--- a/src/main/resources/db/changelog/0005-add-onDelete-to-financial-transaction-foreignKey.yaml
+++ b/src/main/resources/db/changelog/0005-add-onDelete-to-financial-transaction-foreignKey.yaml
@@ -1,6 +1,6 @@
 databaseChangeLog:
     - changeSet:
-          id: "10"
+          id: "drop and add foreign key"
           author: pmackowiak
           changes:
               - dropForeignKeyConstraint:
