--- a/src/main/resources/db/changelog/0009-add-constraints-foreign-key-wallets.yaml
+++ b/src/main/resources/db/changelog/0009-add-constraints-foreign-key-wallets.yaml
@@ -1,6 +1,6 @@
 databaseChangeLog:
   - changeSet:
-      id: "16"
+      id: "add foreign key to wallets"
       author: Iwona007
       changes:
       -  addForeignKeyConstraint:
