--- a/src/main/resources/db/changelog/1002-insert-into-wallets.yaml
+++ b/src/main/resources/db/changelog/1002-insert-into-wallets.yaml
@@ -1,6 +1,6 @@
 databaseChangeLog:
   -  changeSet:
-       id: loaddata-example
+       id: "insert into wallet"
        author: iwona007
        changes:
          - loadData:
