--- a/src/main/resources/db/changelog/0007-alter-table-wallets.yaml
+++ b/src/main/resources/db/changelog/0007-alter-table-wallets.yaml
@@ -1,6 +1,6 @@
 databaseChangeLog:
   - changeSet:
-      id: "12"
+      id: "add column to wallets"
       author: Iwona007
       changes:
         - addColumn:
