codeReview:  add pattern validation

--- a/src/main/resources/db/changelog/0003-create-table-financial_transaction_categories.yaml
+++ b/src/main/resources/db/changelog/0003-create-table-financial_transaction_categories.yaml
@@ -1,6 +1,6 @@
 databaseChangeLog:
   - changeSet:
-      id: "create table financial_transaction_categories"
+      id: "create table financial transaction categories"
       author: Krisu93
       changes:
         - createTable:
