--- a/src/main/resources/db/changelog/1004-insert-into-financial_transactions.yaml
+++ b/src/main/resources/db/changelog/1004-insert-into-financial_transactions.yaml
@@ -1,6 +1,6 @@
 databaseChangeLog:
   - changeSet:
-      id: "insert into financial_transaction"
+      id: "insert into financial transaction"
       author: iwona007
       changes:
         - loadData:
