feture: add user entity work at users table yaml (#241)
* feture: add user entity work at users table yaml

* feature: add UserRepository, create table and alter table yaml files, change user, wallet entity and configuration yaml files

* feature: add insert and constraint yaml files, add user csv file, change 010 yam file, dbchangelog-dev.yaml, user and wallet class and wallets.csv file

* feature: implement user entity, add yaml files

* feature: implement user entity, add yaml files

* feature: fix integration tests, add user entity

* feature: fix integration tests, add user dto

* codeReview:  add pattern validation

* test: implement test

* test: fix test and add user id

* test: fix test and add user id

* test: ignore test

* test: change ignore to disable annotation

* fix: change name of test

* add serialVersion to User entity

* fix test name, and disable for new issue

--- a/src/main/resources/db/changelog/1004-insert-into-financial_transactions.yaml
+++ b/src/main/resources/db/changelog/1004-insert-into-financial_transactions.yaml
@@ -1,6 +1,6 @@
 databaseChangeLog:
   - changeSet:
-      id: "6"
+      id: "insert into financial transaction"
       author: iwona007
       changes:
         - loadData:
