--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,11 @@
             <artifactId>mysql</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-crypto</artifactId>
+            <version>6.0.2</version>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
