--- a/src/main/resources/db/dbchangelog-dev.yaml
+++ b/src/main/resources/db/dbchangelog-dev.yaml
@@ -17,6 +17,8 @@ databaseChangeLog:
       file: db/changelog/0008-create-table-users.yaml
   - include:
       file: db/changelog/0009-add-constraints-foreign-key-wallets.yaml
+  - include:
+      file: db/changelog/0011-add-key-constraint-user-and-financial-transaction-category.yaml
 
   - include:
       file: db/changelog/1001-insert-into-users.yaml
