--- a/src/main/resources/db/dbchangelog-test.yaml
+++ b/src/main/resources/db/dbchangelog-test.yaml
@@ -15,3 +15,5 @@ databaseChangeLog:
       file: db/changelog/0008-create-table-users.yaml
   - include:
       file: db/changelog/0009-add-constraints-foreign-key-wallets.yaml
+  - include:
+      file: db/changelog/0011-add-key-constraint-user-and-financial-transaction-category.yaml
