--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 
     <properties>
         <java.version>17</java.version>
-        <testcontainers.version>1.17.2</testcontainers.version>
+        <testcontainers.version>1.18.3</testcontainers.version>
         <org.mapstruct.version>1.5.2.Final</org.mapstruct.version>
         <sonar.organization>bycza-zagroda</sonar.organization>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
@@ -78,6 +78,11 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>testcontainers</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
