feat/Updated code after code review.

--- a/src/main/resources/db/changelog/0011-add-key-constraint-user-and-financial-transaction-category.yaml
+++ b/src/main/resources/db/changelog/0011-add-key-constraint-user-and-financial-transaction-category.yaml
@@ -1,6 +1,6 @@
 databaseChangeLog:
   - changeSet:
-      id: "add foreign key to financial_transaction_categories"
+      id: "add foreign key to financial transaction categories"
       author: SzanieckiFranciszek
       changes:
         - addForeignKeyConstraint:
