feat/Updated yaml file name.

--- a/src/main/resources/db/dbchangelog-prod.yaml
+++ b/src/main/resources/db/dbchangelog-prod.yaml
@@ -18,4 +18,6 @@ databaseChangeLog:
   - include:
       file: db/changelog/0009-add-constraints-foreign-key-wallets.yaml
   - include:
-      file: db/changelog/0011-add-key-constraint-user-and-financial-transaction-category.yaml
+      file: db/changelog/0011-add-new-column-to-financial-transaction-category.yaml
+  - include:
+      file: db/changelog/0012-add-key-constraint-user-and-financial-transaction-category.yaml
