--- a/src/main/resources/db/dbchangelog-dev.yaml
+++ b/src/main/resources/db/dbchangelog-dev.yaml
@@ -18,7 +18,9 @@ databaseChangeLog:
   - include:
       file: db/changelog/0009-add-constraints-foreign-key-wallets.yaml
   - include:
-      file: db/changelog/0011-add-key-constraint-user-and-financial-transaction-category.yaml
+      file: db/changelog/0011-add-new-column-to-financial-transaction-category.yaml
+  - include:
+      file: db/changelog/0012-add-key-constraint-user-and-financial-transaction-category.yaml
 
   - include:
       file: db/changelog/1001-insert-into-users.yaml
