Feature/238-association user and financial transaction category (#266)
* getting started

* feat/Created Many-to-One Associations between financial transaction category and user in User class and FinancialTransactionCategory class.

* feat/Created new yaml files for add key constraint user and financial transaction category. Added this file to config db yaml files and added definition create user_id column to file 003-create-table-financial_transaction_categories.yaml. Updated input data file: financial_transaction_categories.csv.

* feat/Updated code after code review.

* feat/Updated yaml file name.

* feat/Updated integration tests regarding financialTransactionCategory which didn't work after implement relation between FinancialTransactionCategory and User.

* feat/Changes after code review. Updated method createFinancialTransactionCategory in FinancialTransactionCategoryServiceImpl class and added field userRepository into FinancialTransactionCategoryServiceImplTest class.

* feat/Changes after code review.

* feat/Code refactor after code review.

---------

Co-authored-by: Iwona <51120038+Iwona007@users.noreply.github.com>

--- a/src/main/resources/db/dbchangelog-prod.yaml
+++ b/src/main/resources/db/dbchangelog-prod.yaml
@@ -17,3 +17,7 @@ databaseChangeLog:
       file: db/changelog/0008-create-table-users.yaml
   - include:
       file: db/changelog/0009-add-constraints-foreign-key-wallets.yaml
+  - include:
+      file: db/changelog/0011-add-new-column-to-financial-transaction-category.yaml
+  - include:
+      file: db/changelog/0012-add-key-constraint-user-and-financial-transaction-category.yaml
