changes after code review.

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -15,11 +15,7 @@ spring:
     generate-ddl: false
     hibernate:
       ddl-auto: validate
-    #do debugowania sql
     show-sql: true
-    properties:
-      hibernate:
-        format_sql: true
 
 # OpenApi-UI
 springdoc:
@@ -30,5 +26,6 @@ springdoc:
     path: /docs/swagger
     enabled: true
 
+#TODO before release we should change this and use an environment variable
 jwt:
   secret: Blabla
