--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -5,12 +5,16 @@ spring:
     username: ${DB_USER}
     password: ${DB_PASSWORD}
 
-#to zeby wyrzucaly sie castomowe wyjatki gdy nie ma endointu jeszcze
   mvc:
     throw-exception-if-no-handler-found: true
   web:
     resources:
       add-mappings: false
+
+  jpa:
+    properties:
+      hibernate:
+        format_sql: true
 
   liquibase:
     change-log: db/dbchangelog-dev.yaml
