--- a/src/main/resources/application-test.yaml
+++ b/src/main/resources/application-test.yaml
@@ -4,6 +4,7 @@ spring:
     url: jdbc:mysql://localhost:3306/trackexpensesapptest?useUnicode=true&serverTimezone=UTC
     username: root
     password: root
+    driver-class-name: com.mysql.cj.jdbc.Driver
 
   jackson:
     default-property-inclusion: non_empty
