updated tokens lifetimes

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -33,5 +33,5 @@ springdoc:
 #TODO before release we should change this and use an environment variable
 jwt:
   secret: Blabla
-  exp: 3600000
-  refresh-exp: 3600000
+  exp: 604800000 # one week
+  refresh-exp: 31536000000 # one year
