--- a/src/main/resources/application-test.yaml
+++ b/src/main/resources/application-test.yaml
@@ -1,7 +1,7 @@
 #Datasource
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/trackexpensesapptest?useUnicode=true&serverTimezone=UTC
+    url: jdbc:mysql://localhost:3306/trackexpensesapptest?useUnicode=true
     username: root
     password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -14,3 +14,8 @@ spring:
 
 server:
   port: 8090
+
+jwt:
+  secret: blabla
+  exp: 604800000 # one week
+  refresh-exp: 31536000000 # one year
